--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       right: 0;
       z-index: 10;
       margin-top: 20px;
-      margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+      margin-bottom: -90px;
+      /*margin-right: 320px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
     }
     .navbar-wrapper .navbar {
 
@@ -94,6 +95,7 @@
     .carousel .item {
       height: 500px;
     }
+
     .carousel img {
       position: absolute;
       top: 0;
@@ -109,6 +111,7 @@
       padding: 0 20px;
       margin-top: 200px;
     }
+
     .carousel-caption h1,
     .carousel-caption .lead {
       margin: 0;
@@ -174,7 +177,7 @@
     ------------------------- */
 
     .footer p {
-      margin-bottom: 30px;
+      margin-top: 30px;
     <!--  margin:30px; -->
     }
 
@@ -281,10 +284,8 @@
     <!-- NAVBAR
     ================================================== -->
     <div class="navbar-wrapper">
-    <!--<div class="span1">
-      <img src="img/sff_85.png" alt="logo" height="85" width="85">
-    </div> 
-    <div class="span11"> -->  
+    
+    <!--<div class="span11">   -->
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
       <div class="container">
 
@@ -325,9 +326,14 @@
 
       </div> <!-- /.container -->
     </div><!-- /.navbar-wrapper -->
+    <!--<div class="span1">
+      <img src="img/sff_85.png" alt="logo" height="85" width="85">
+    </div>-->
 
-
-
+<!--    <div class="hero-unit">
+      <h1>HEllo W</h1>
+      <p>dfsdfsd</p>
+    </div>-->
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide">
@@ -338,17 +344,17 @@
             <div class="carousel-caption">
               <h1>Blue Sky Dubai!</h1>
               <p class="lead">Tillfällig startsida som tar dig till det vi helst vill sprida just nu. Man få klicka på länken nedan, helt enkelt. Prova inte nu dock, det funkar inte.</p>
-              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+              <a class="btn btn-large btn-primary" href="#">Book flights</a>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="img/bigway.png" alt="">
+          <img src="img/bigway.jpg" alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Trying bigway.</h1>
               <p class="lead">Going bigway is a challange, but can be rewarding as hell. We followed someone who knows, Fake Name. Detta borde nog ha varit svensk text, men vad fan. Nu blev det så här istället.</p>
-              <a class="btn btn-large btn-primary" href="#">Learn more</a>
+              <a class="btn btn-large btn-primary" href="#">Mejla Mörtberg</a>
             </div>
           </div>
         </div>
@@ -358,7 +364,7 @@
             <div class="carousel-caption">
               <h1>VFS FFS!</h1>
               <p class="lead">Sluta flyga på magen och börja flyga på riktigt!!</p>
-              <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
+              <a class="btn btn-large btn-primary" href="#">Talk to Altair</a>
             </div>
           </div>
         </div>
@@ -432,7 +438,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p style="margin-top:30px">&copy; 2012 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p style="margin-top:30px">&copy; 2012 SFF &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
@@ -442,7 +448,43 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js"></script>
-    
+    <script src="js/jquery-1.8.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-alert.js"></script>
+    <script src="js/bootstrap-modal.js"></script>
+    <script src="js/bootstrap-dropdown.js"></script>
+    <script src="js/bootstrap-scrollspy.js"></script>
+    <script src="js/bootstrap-tab.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-popover.js"></script>
+    <script src="js/bootstrap-button.js"></script>
+    <script src="js/bootstrap-collapse.js"></script>
+    <script src="js/bootstrap-carousel.js"></script>
+    <script src="js/bootstrap-typeahead.js"></script>
+    <script>
+        $('#myCarousel').carousel({
+          interval: 2000;
+        });
+      //});
+    </script>
+
+
+  <!--<script>
+      //$(document).ready(function(){
+        $('.carousel').carousel({
+          interval
+        });
+      //});
+//    </script> -->
+
+    <!--<script>
+      !function ($) {
+        $(function(){
+          // carousel demo
+          $('#myCarousel').carousel()
+        })
+      }(window.jQuery)
+    </script> -->
+
   </body>
 </html>
