Adding a template for the listing of active blogs for SFF

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Carousel Template &middot; SFF</title>
+    <title>SFF Demosite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -118,7 +118,7 @@
       max-width: 550px;
       padding: 0 20px;
       margin-top: 200px;
-      margin-left: 20px;
+      margin-left: 40px;
       margin-right: 20px;
     }
 
@@ -267,7 +267,7 @@
       }
       .carousel-caption {
         width: 65%;
-        padding: 0 70px;
+        padding: 0 30px;
         margin-top: 100px;
       }
       .carousel-caption h1 {
@@ -343,7 +343,7 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="active"><a href="#">Hem</a></li>
-                <li><a href="#about">SBF</a></li>
+                <li><a href="#about">Dokument</a></li>
                 <li><a href="#contact">Ta certifikat</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
                 <li class="dropdown">
@@ -425,9 +425,15 @@
       <div class="row">
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
+          <h2>Twitter</h2>
+          <p>SFF twittrar under namnet @SkydiveSwe. Följ oss där så ser du direkt när något nytt händer på vår site eller i fallskärms-Sverige. SFF har ett gäng personer som twittrar via detta konto.</p>
+          <p style="text-align: center"><a class="btn" href="https://twitter.com/SkydiveSwe">@SkydiveSwe &raquo;</a></p>
+        </div><!-- /.span4 -->
+        <div class="span4">
+          <img class="img-circle" data-src="holder.js/140x140">
           <h2>Blogg</h2>
           <p>SFF bloggar om event vi är på, styrelsen arbete och annat som rör fallskärmshoppning. Vi tar emot gästbloggare. Kolla upp oss bums!</p>
-          <p style="text-align: center"><a class="btn" href="#">Kolla blogg &raquo;</a></p>
+          <p style="text-align: center"><a class="btn" href="#">Läs bloggar &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
@@ -435,12 +441,7 @@
           <p>För att planera bra hoppning och veta vad som händer så använder vi vår stora kalender. Här hittar du tävlingar, bugin, förbundsmöten och konferenser.</p>
           <p style="text-align: center"><a class="btn" href="#">Hitta datum &raquo;</a></p>
         </div><!-- /.span4 -->
-        <div class="span4">
-          <img class="img-circle" data-src="holder.js/140x140">
-          <h2>Dokument</h2>
-          <p>Detta är vårt dokumentarkiv, en dropbox helt enkelt. Den är uppdelad i enkla kategorier så att du kan söka efter den typ av info som du behöver.</p>
-          <p style="text-align: center"><a class="btn" href="#">Leta prylar &raquo;</a></p>
-        </div><!-- /.span4 -->
+        
       </div><!-- /.row -->
 
 
