Added som width constraints to the bloglisting

--- a/bloglisting.html
+++ b/bloglisting.html
@@ -60,10 +60,6 @@ window.addEventListener("load",function() {
                     <li><a href="#">Organisation</a></li>
                     <li><a href="#">Styrelse</a></li>
                     <li><a href="#">Försvarsmakten</a></li>
-                    <li class="divider"></li>
-                    <li class="nav-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
               </ul>
@@ -91,24 +87,32 @@ window.addEventListener("load",function() {
   -->
 
   <!-- Start the Featurettes -->
-  <hr class="featurette-divider">
+  <div class="container marketing">
+    <div class="container">
+    <hr class="featurette-divider">
 
-      <div class="featurette">
-        <img class="featurette-image pull-right" src="img/fire_cropped.png">
-        <h2 class="featurette-heading">sffInDubai2012 <span class="muted">Fallskärmshoppning som det borde vara!</span></h2>
-        <p class="lead">Bloggen är stängd, men kolla gärna igenom för att minnas de tävlingar som var och det fantastiska resultatet som Sverige fick.</p>
-      </div>
+        <div class="featurette">
+          <img class="featurette-image pull-right" src="img/fire_cropped.png">
+          <h2 class="featurette-heading">sffInDubai2012 <span class="muted">Just Awesome!</span></h2>
+          <p class="lead">Tävlingarna är slut och bloggen är nu stängd. Kolla gärna igenom för att minnas ett suveränt VM och det fantastiska resultatet som Sverige fick.</p>
+        </div>
 
-  <hr class="featurette-divider">
+    <hr class="featurette-divider">
 
-  <div class="featurette">
-        <img class="featurette-image pull-right" src="img/altair_cropped.png">
-        <h2 class="featurette-heading">SM2013<span class="muted">It'll blow your mind.</span></h2>
-        <p class="lead">VM är klart och vi drar vidare. Denna blogg täcker förberedelser och går sedan in på att rapportera från tävlingen. Det är snart sommar igen!</p>
-      </div>
-      
-  <hr class="featurette-divider">
+        <div class="featurette">
+          <img class="featurette-image pull-right" src="img/altair_cropped.png">
+          <h2 class="featurette-heading">SM2013<span class="muted">It'll blow your mind.</span></h2>
+          <p class="lead">VM är klart och vi drar vidare. Denna blogg täcker förberedelser och går sedan in på att rapportera från tävlingen. Det är snart sommar igen!</p>
+        </div>
 
+    <hr class="featurette-divider">
+
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p style="margin-top:30px">&copy; 2012 SFF &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+    </div>
+  </div>
 
         <!-- Le javascript
     ================================================== -->
