--- a/index.html
+++ b/index.html
@@ -62,10 +62,6 @@
                     <li><a href="#">Organisation</a></li>
                     <li><a href="#">Styrelse</a></li>
                     <li><a href="#">Försvarsmakten</a></li>
-                    <li class="divider"></li>
-                    <li class="nav-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
               </ul>
@@ -130,14 +126,14 @@
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Twitter</h2>
-          <p>SFF twittrar under namnet @SkydiveSwe. Följ oss där så ser du direkt när något nytt händer på vår site eller i fallskärms-Sverige. SFF har ett gäng personer som twittrar via detta konto.</p>
+          <p>SFF twittrar under namnet @SkydiveSwe. Följ oss där så ser du direkt när något nytt händer på vår site eller i fallskärms-Sverige.</p>
           <p style="text-align: center"><a class="btn" href="https://twitter.com/SkydiveSwe">@SkydiveSwe &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
           <h2>Blogg</h2>
           <p>SFF bloggar om event vi är på, styrelsen arbete och annat som rör fallskärmshoppning. Vi tar emot gästbloggare. Kolla upp oss bums!</p>
-          <p style="text-align: center"><a class="btn" href="#">Läs bloggar &raquo;</a></p>
+          <p style="text-align: center"><a class="btn" href="bloglisting.html">Läs bloggar &raquo;</a></p>
         </div><!-- /.span4 -->
         <div class="span4">
           <img class="img-circle" data-src="holder.js/140x140">
