--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
               <span class="icon-bar"></span>
             </a>
             
-            <a class="brand" href="#">SFF</a>
+            <!-- <img class="brand img" src="img/sff_85.png" height="32" width="32"></img> -->
+
+           <a class="brand" href="#">SFF</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
