Smaller changes to logo and text

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
               <span class="icon-bar"></span>
             </a>
             
-            <!-- <img class="brand img" src="img/sff_85.png" height="32" width="32"></img> -->
+            <img class="brand img" src="img/sff_85.png" height="64" width="64"></img> 
 
-           <a class="brand" href="#">SFF</a>
+           <!--<a class="brand" href="#">SFF</a>-->
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
